Added JavaScript close functionality

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Modal/Form Review</title>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="css/default.css" />
   <script src="js/main.js"></script>
 </head>
 <body>
   <div id="modal">
+    <i class="fa fa-close close"></i>
     <h2>Please List your Interests</h2>
     <form action="/where-we-send-it.html" method="POST">
     <label for="email">email:</label> <input type="text" name="email" placeholder="you@domain.com" /><br />
